<resources>
    <string name="app_name">Reverse Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="account_fragment">Account fragment</string>
    <string name="pantry_fragment">Pantry fragment</string>
    <string name="recipe_search_fragment">Recipe search fragment</string>
    <string name="saved_recipes_fragment">Saved recipes fragment</string>
    <string name="search_fragment">Search fragment</string>
    <string name="recipe_3">Recipe 3</string>
    <string name="recipe_4">Recipe 4</string>
    <string name="recipe_1">Recipe 1</string>
    <string name="recipe_2">Recipe 2</string>
    <string name="recipe_5">Recipe 5</string>
    <string name="my_pantry">My Pantry</string>
    <string name="search">Search</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="saved_page_header">Saved</string>
    <string name="saved">SAVED</string>
    <string name="pantry">PANTRY</string>
    <string name="account">ACCOUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>