<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/pantryFragment">

    <fragment
        android:id="@+id/pantryFragment"
        android:name="com.cse403.reverserecipes.UI.Fragments.PantryFragment"
        android:label="@string/pantry_fragment" >
        <action
            android:id="@+id/action_pantryFragment_to_ingredientSearchFragment"
            app:destination="@id/ingredientSearchFragment" />
        <action
            android:id="@+id/action_pantryFragment_to_recipeSearchFragment"
            app:destination="@id/recipeSearchFragment" />
    </fragment>
    <fragment
        android:id="@+id/savedRecipesFragment"
        android:name="com.cse403.reverserecipes.UI.Fragments.SavedRecipesFragment"
        android:label="@string/saved_recipes_fragment" />
    <fragment
        android:id="@+id/ingredientSearchFragment"
        android:name="com.cse403.reverserecipes.UI.Fragments.IngredientSearchFragment"
        android:label="@string/search_fragment" />
    <fragment
        android:id="@+id/recipeSearchFragment"
        android:name="com.cse403.reverserecipes.UI.Fragments.RecipeSearchFragment"
        android:label="fragment_recipe_search"
        tools:layout="@layout/fragment_recipe_search" />
</navigation>